fixed components spacing

--- a/src/components/objects/Chip.scss
+++ b/src/components/objects/Chip.scss
@@ -17,7 +17,8 @@
 
   &.isSmall {
     font-size: rem(12);
-    margin: rem(3);
+    margin-right: rem(6);
+    margin-bottom: rem(6);
     padding: rem(3) rem(12);
   }
 }
